--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!doctype html>
 <html>
 	<head>
-
+		<link rel="stylesheet" type="text/css" href="style.css"></link>
+		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+		<style>
+			li {
+				width:200px;
+				height:55px;
+			}
+			li a {
+				line-height:55px;
+				display: block;
+				width: 100%;
+				text-align: center;
+			}
+		</style>
+		<script>
+			$(document).ready(function(){
+				$('li').css('cursor', 'pointer');
+				$('li').click(function(e){
+					e.stopPropagation();
+					e.preventDefault();
+					window.location.href=$(this).find('a').attr('href');
+				})
+			});
+		</script>
 	</head>
 	<body>
 		<ul>
@@ -10,6 +33,9 @@
 			</li>
 			<li>
 				<a target="_blank" href='02-jQuery'>Version jQuery</a>
+			</li>
+			<li>
+				<a target="_blank" href='03-Autocomplete'>Autocomplete</a>
 			</li>
 	</body>
 </html>
