Add back icon + revert wrong commit on jQuery/script

--- a/03-Autocomplete/index.html
+++ b/03-Autocomplete/index.html
@@ -13,6 +13,7 @@
 		</style>
 	</head>
 	<body>
+		<div class="backIcon"></div>
 		<input id="search" name="search" type="text" />
 		<div>
 			Nombre de résultat : <span id="nbResult"/>
