--- a/index.html
+++ b/index.html
@@ -87,5 +87,8 @@
 			<li>
 				<a target="_blank" href='03-Autocomplete'>Autocomplete</a>
 			</li>
+			<li>
+				<a target="_blank" href='04-Validation'>Validation</a>
+			</li>
 	</body>
 </html>
