Add prototype example

--- a/index.html
+++ b/index.html
@@ -90,5 +90,8 @@
 			<li>
 				<a target="_blank" href='04-Validation'>Validation</a>
 			</li>
+			<li>
+				<a target="_blank" href='05-Prototype'>Prototype</a>
+			</li>
 	</body>
 </html>
